# DSA4263-Project-Twitter-Bots

./: Makefile  Models.ipynb  README.md  pyproject.toml  requirements.txt
hy_description_translated/: twitter_with_lang.csv
notebooks/: Models.ipynb  XGBoost.ipynb  baseline draft 2 + bertopic.ipynb  baseline models.ipynb  data_exploration.ipynb  hypo_richellle.ipynb  hypothesis.ipynb  model1.ipynb  preprocessing.ipynb  yilin_eda.ipynb
notebooks/draft/: eda._royston.ipynb  preprocess_eda_covan.ipynb  try.ipynb  yilin_eda.ipynb
src/data/: make_dataset.py
