[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dsa4263_project_twitter_bots"
version = "0.0.1"
description = "Machine Learning solution for detection of Twitter Bots"
authors = [
  { name = "DSA4263 Group 6-1" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["dsa4263_project_twitter_bots"]
include = ["pyproject.toml", "dsa4263_project_twitter_bots/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dsa4263_project_twitter_bots"]
force-sort-within-sections = true

